--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatPodrobnostiKultPodForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatPodrobnostiKultPodForm.form
@@ -64,6 +64,8 @@
                       </Group>
                   </Group>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="formatCasLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -78,6 +80,7 @@
                   <Component id="eurLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="zacinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="zacinaTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="formatCasLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -176,6 +179,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stornoButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="formatCasLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="(hh:mm:ss)"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
