--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/UpravitTuristikaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/UpravitTuristikaForm.form
@@ -184,6 +184,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="stornoButton">
       <Properties>
