--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/TuristikaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/TuristikaForm.form
@@ -142,11 +142,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="odstranitButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Odstr&#xe1;ni&#x165;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="odstranitButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="vsetkyButton">
       <Properties>
